testsuite/poke.pkl/funcall-def-diag-6.pk
/* { dg-do compile } */

defun def4 = (int a, int b, int c = 1, int d = 2) int: { return a + b + c + d; }

defun foo = void:
  {
  def4 :a 10 :bb 20 :c 30 :d 40;  /* { dg-error "" } */
  }
